kube.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tang

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tangd1
  namespace: tang
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      name: tang1
  template:
    metadata:
      labels:
        name: tang1
        lb: tang-all
    spec:
      containers:
      - image: quay.io/dbaker/test:tangd  ## xxx replace me
        imagePullPolicy: IfNotPresent
        name: tang
        ports:
        - containerPort: 8080
          name: tcp8080
          protocol: TCP
        volumeMounts:
        - mountPath: /var/db/tang
          name: data

      securityContext:
        runAsNonRoot: true
        runAsUser: 2000
        fsGroup: 2000

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: tangdaemon-data1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tangd2
  namespace: tang
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      name: tang2
  template:
    metadata:
      labels:
        name: tang2
        lb: tang-all
    spec:
      containers:
      - image: quay.io/dbaker/test:tangd  ## xxx replace me
        imagePullPolicy: IfNotPresent
        name: tang
        ports:
        - containerPort: 8080
          name: tcp8080
          protocol: TCP
        volumeMounts:
        - mountPath: /var/db/tang
          name: data

      securityContext:
        runAsNonRoot: true
        runAsUser: 2000
        fsGroup: 2000

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: tangdaemon-data2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tangd3
  namespace: tang
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      name: tang3
  template:
    metadata:
      labels:
        name: tang3
        lb: tang-all
    spec:
      containers:
      - image: quay.io/dbaker/test:tangd  ## xxx replace me
        imagePullPolicy: IfNotPresent
        name: tang
        ports:
        - containerPort: 8080
          name: tcp8080
          protocol: TCP
        volumeMounts:
        - mountPath: /var/db/tang
          name: data

      securityContext:
        runAsNonRoot: true
        runAsUser: 2000
        fsGroup: 2000

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: tangdaemon-data3

---
apiVersion: v1
kind: Service
metadata:
  name: tangd1
  namespace: tang
spec:
  ports:
  - name: tcp8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: tang1

---
apiVersion: v1
kind: Service
metadata:
  name: tangd2
  namespace: tang
spec:
  ports:
  - name: tcp8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: tang2

---
apiVersion: v1
kind: Service
metadata:
  name: tangd3
  namespace: tang
spec:
  ports:
  - name: tcp8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: tang3

---
apiVersion: v1
kind: Service
metadata:
  name: tangd-all
  namespace: tang
spec:
  ports:
  - name: tcp8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    lb: tang-all

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tang-80
  namespace: tang
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`tang.example.com`)    ## Replace me
    services:
    - kind: Service
      name: tangd-all
      port: 8080
  - kind: Rule
    match: Host(`tang1.example.com`)    ## Replace me
    services:
    - kind: Service
      name: tangd1
      port: 8080
  - kind: Rule
    match: Host(`tang2.example.com`)    ## Replace me
    services:
    - kind: Service
      name: tangd2
      port: 8080
  - kind: Rule
    match: Host(`tang3.example.com`)    ## Replace me
    services:
    - kind: Service
      name: tangd3
      port: 8080
